uploaded new files

--- a/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,18 +524,35 @@
     "    \n",
     "    # get the total count of words for all words in the dictionary\n",
     "    \n",
+    "    M = 0\n",
+    "    \n",
+    "    for word in word_count_dict.keys():\n",
+    "        M += word_count_dict[word]\n",
+    "        \n",
+    "    for word in word_count_dict.keys():\n",
+    "        probs[word] = word_count_dict[word]/M\n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "    return probs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of probs is 6116\n",
+      "P('thee') is 0.0045\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL\n",
     "probs = get_probs(word_count_dict)\n",
@@ -557,9 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_get_probs(get_probs, word_count_dict)"
@@ -708,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,6 +753,10 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    split_l=[(word[:i],word[i:]) for i in range(len(word)+1)]\n",
+    "    delete_l=[L+R[1:] for L,R in split_l if R]\n",
+    "    \n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    if verbose: print(f\"input word {word}, \\nsplit_l = {split_l}, \\ndelete_l = {delete_l}\")\n",
@@ -737,9 +766,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input word cans, \n",
+      "split_l = [('', 'cans'), ('c', 'ans'), ('ca', 'ns'), ('can', 's'), ('cans', '')], \n",
+      "delete_l = ['ans', 'cns', 'cas', 'can']\n"
+     ]
+    }
+   ],
    "source": [
     "delete_word_l = delete_letter(word=\"cans\",\n",
     "                        verbose=True)"
@@ -794,9 +833,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of outputs of delete_letter('at') is 2\n"
+     ]
+    }
+   ],
    "source": [
     "# test # 2\n",
     "print(f\"Number of outputs of delete_letter('at') is {len(delete_letter('at'))}\")"
@@ -815,9 +862,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_delete_letter(delete_letter)"
@@ -895,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -916,6 +971,10 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    len_word=len(word)\n",
+    "    [split_l.append((word[:i],word[i:])) for i in range(len(word))]\n",
+    "    switch_l = [L + R[1] + R[0] + R[2:] for L,R in split_l if len(R) >= 2] \n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    if verbose: print(f\"Input word = {word} \\nsplit_l = {split_l} \\nswitch_l = {switch_l}\") \n",
@@ -925,9 +984,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input word = eta \n",
+      "split_l = [('', 'eta'), ('e', 'ta'), ('et', 'a')] \n",
+      "switch_l = ['tea', 'eat']\n"
+     ]
+    }
+   ],
    "source": [
     "switch_word_l = switch_letter(word=\"eta\",\n",
     "                         verbose=True)"
@@ -978,9 +1047,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of outputs of switch_letter('at') is 1\n"
+     ]
+    }
+   ],
    "source": [
     "# test # 2\n",
     "print(f\"Number of outputs of switch_letter('at') is {len(switch_letter('at'))}\")"
@@ -999,9 +1076,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_switch_letter(switch_letter)"
