--- a/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,6 +1148,12 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    len_word=len(word)\n",
+    "    [split_l.append((word[:i],word[i:])) for i in range(len(word))]\n",
+    "    replace_l = [L + letter + (R[1:] if len(R)> 1 else '') for L,R in split_l if R for letter in letters]\n",
+    "    replace_set=set(replace_l)    \n",
+    "    replace_set.remove(word)\n",
+    "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # turn the set back into a list and sort it, for easier viewing\n",
@@ -1160,9 +1166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input word = can \n",
+      "split_l = [('', 'can'), ('c', 'an'), ('ca', 'n')] \n",
+      "replace_l ['aan', 'ban', 'caa', 'cab', 'cac', 'cad', 'cae', 'caf', 'cag', 'cah', 'cai', 'caj', 'cak', 'cal', 'cam', 'cao', 'cap', 'caq', 'car', 'cas', 'cat', 'cau', 'cav', 'caw', 'cax', 'cay', 'caz', 'cbn', 'ccn', 'cdn', 'cen', 'cfn', 'cgn', 'chn', 'cin', 'cjn', 'ckn', 'cln', 'cmn', 'cnn', 'con', 'cpn', 'cqn', 'crn', 'csn', 'ctn', 'cun', 'cvn', 'cwn', 'cxn', 'cyn', 'czn', 'dan', 'ean', 'fan', 'gan', 'han', 'ian', 'jan', 'kan', 'lan', 'man', 'nan', 'oan', 'pan', 'qan', 'ran', 'san', 'tan', 'uan', 'van', 'wan', 'xan', 'yan', 'zan']\n"
+     ]
+    }
+   ],
    "source": [
     "replace_l = replace_letter(word='can',\n",
     "                              verbose=True)"
@@ -1213,9 +1229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of outputs of replace_letter('at') is 50\n"
+     ]
+    }
+   ],
    "source": [
     "# test # 2\n",
     "print(f\"Number of outputs of replace_letter('at') is {len(replace_letter('at'))}\")"
@@ -1233,9 +1257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_replace_letter(replace_letter)"
@@ -1258,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,9 +1318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input word at \n",
+      "split_l = [] \n",
+      "insert_l = []\n",
+      "Number of strings output by insert_letter('at') is 0\n"
+     ]
+    }
+   ],
    "source": [
     "insert_l = insert_letter('at', True)\n",
     "print(f\"Number of strings output by insert_letter('at') is {len(insert_l)}\")"
@@ -1346,9 +1389,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output list do not have the expected number of elements.\n",
+      "\tExpected: 78.\n",
+      "\tGot: 0.\n",
+      "Wrong output values.\n",
+      "\tExpected: ['aat', 'bat', 'cat', 'dat', 'eat', 'fat', 'gat', 'hat', 'iat', 'jat', 'kat', 'lat', 'mat', 'nat', 'oat', 'pat', 'qat', 'rat', 'sat', 'tat', 'uat', 'vat', 'wat', 'xat', 'yat', 'zat', 'aat', 'abt', 'act', 'adt', 'aet', 'aft', 'agt', 'aht', 'ait', 'ajt', 'akt', 'alt', 'amt', 'ant', 'aot', 'apt', 'aqt', 'art', 'ast', 'att', 'aut', 'avt', 'awt', 'axt', 'ayt', 'azt', 'ata', 'atb', 'atc', 'atd', 'ate', 'atf', 'atg', 'ath', 'ati', 'atj', 'atk', 'atl', 'atm', 'atn', 'ato', 'atp', 'atq', 'atr', 'ats', 'att', 'atu', 'atv', 'atw', 'atx', 'aty', 'atz'].\n",
+      "\tGot: [].\n",
+      "Output list do not have the expected number of elements.\n",
+      "\tExpected: 104.\n",
+      "\tGot: 0.\n",
+      "Wrong output values.\n",
+      "\tExpected: ['acan', 'bcan', 'ccan', 'dcan', 'ecan', 'fcan', 'gcan', 'hcan', 'ican', 'jcan', 'kcan', 'lcan', 'mcan', 'ncan', 'ocan', 'pcan', 'qcan', 'rcan', 'scan', 'tcan', 'ucan', 'vcan', 'wcan', 'xcan', 'ycan', 'zcan', 'caan', 'cban', 'ccan', 'cdan', 'cean', 'cfan', 'cgan', 'chan', 'cian', 'cjan', 'ckan', 'clan', 'cman', 'cnan', 'coan', 'cpan', 'cqan', 'cran', 'csan', 'ctan', 'cuan', 'cvan', 'cwan', 'cxan', 'cyan', 'czan', 'caan', 'cabn', 'cacn', 'cadn', 'caen', 'cafn', 'cagn', 'cahn', 'cain', 'cajn', 'cakn', 'caln', 'camn', 'cann', 'caon', 'capn', 'caqn', 'carn', 'casn', 'catn', 'caun', 'cavn', 'cawn', 'caxn', 'cayn', 'cazn', 'cana', 'canb', 'canc', 'cand', 'cane', 'canf', 'cang', 'canh', 'cani', 'canj', 'cank', 'canl', 'canm', 'cann', 'cano', 'canp', 'canq', 'canr', 'cans', 'cant', 'canu', 'canv', 'canw', 'canx', 'cany', 'canz'].\n",
+      "\tGot: [].\n",
+      "\u001b[92m 2  Tests passed\n",
+      "\u001b[91m 4  Tests failed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_insert_letter(insert_letter)"
@@ -1397,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,9 +1487,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input word at \n",
+      "edit_one_l \n",
+      "[]\n",
+      "\n",
+      "The type of the returned object should be a set <class 'set'>\n",
+      "Number of outputs from edit_one_letter('at') is 0\n"
+     ]
+    }
+   ],
    "source": [
     "tmp_word = \"at\"\n",
     "tmp_edit_one_set = edit_one_letter(tmp_word)\n",
@@ -1454,9 +1531,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong number of elements in the returned set.\n",
+      "\tExpected: 129.\n",
+      "\tGot: 0.\n",
+      "Wrong output values.\n",
+      "\tExpected: {'rat', 'ot', 'sat', 'an', 'tt', 'ao', 'ati', 'kt', 'alt', 'as', 'lat', 'ft', 'aht', 'aat', 'atx', 'akt', 'ad', 'yt', 'a', 'aw', 'fat', 'atz', 'atp', 'ae', 'iat', 'aft', 'ac', 'qt', 'atc', 'eat', 'st', 'lt', 'ta', 'jt', 'ata', 'apt', 'ato', 'ar', 'et', 'awt', 'ai', 'ag', 'adt', 'av', 'atg', 'atv', 'uat', 'ut', 't', 'gat', 'xt', 'aut', 'ap', 'vt', 'pt', 'az', 'qat', 'aet', 'nt', 'xat', 'aty', 'kat', 'act', 'atw', 'atr', 'au', 'tat', 'ath', 'ats', 'dat', 'bat', 'azt', 'axt', 'oat', 'atn', 'zt', 'att', 'al', 'atu', 'atk', 'ajt', 'aj', 'aqt', 'rt', 'amt', 'am', 'atl', 'it', 'wt', 'atj', 'agt', 'dt', 'ah', 'gt', 'ax', 'hat', 'aq', 'yat', 'atb', 'atq', 'abt', 'atd', 'ht', 'ct', 'ab', 'aa', 'nat', 'ak', 'ast', 'mt', 'avt', 'vat', 'ay', 'mat', 'af', 'aot', 'pat', 'atf', 'ayt', 'cat', 'bt', 'ant', 'zat', 'ait', 'art', 'atm', 'ate', 'jat', 'wat'}.\n",
+      "\tGot: set().\n",
+      "Wrong number of elements in the returned set.\n",
+      "\tExpected: 181.\n",
+      "\tGot: 0.\n",
+      "Wrong output values.\n",
+      "\tExpected: {'cav', 'ucan', 'czn', 'cjn', 'ecan', 'cam', 'ctn', 'cany', 'csn', 'hcan', 'canq', 'an', 'cann', 'man', 'cadn', 'cacn', 'han', 'cun', 'cwan', 'cano', 'cazn', 'chan', 'cfn', 'qcan', 'acan', 'cran', 'lcan', 'caqn', 'zan', 'cmn', 'ncan', 'cahn', 'cnn', 'mcan', 'san', 'cani', 'ccn', 'con', 'cxan', 'lan', 'canh', 'caln', 'czan', 'ian', 'cawn', 'ocan', 'cajn', 'cean', 'cln', 'scan', 'cai', 'cas', 'caf', 'camn', 'caq', 'cban', 'ccan', 'tan', 'cak', 'jcan', 'gan', 'cin', 'cqan', 'cap', 'coan', 'cank', 'canw', 'cal', 'wan', 'cpan', 'aan', 'capn', 'casn', 'ckn', 'cayn', 'cdan', 'cavn', 'caz', 'cpn', 'cvn', 'jan', 'cbn', 'cdn', 'cn', 'cjan', 'ran', 'ban', 'cand', 'cnan', 'van', 'cyn', 'ckan', 'cafn', 'cian', 'cyan', 'cfan', 'kcan', 'canb', 'ycan', 'vcan', 'nan', 'cans', 'oan', 'cae', 'cagn', 'caan', 'ctan', 'cna', 'fan', 'dan', 'cqn', 'csan', 'canl', 'cakn', 'cag', 'bcan', 'caw', 'canf', 'cgn', 'cxn', 'xcan', 'cah', 'cang', 'cwn', 'cao', 'cuan', 'tcan', 'caj', 'catn', 'cvan', 'clan', 'canc', 'wcan', 'ca', 'caxn', 'carn', 'pan', 'canz', 'canj', 'cane', 'car', 'chn', 'qan', 'zcan', 'cana', 'cad', 'cgan', 'uan', 'caun', 'gcan', 'canm', 'canx', 'cen', 'crn', 'cman', 'caen', 'ean', 'xan', 'cat', 'cant', 'cab', 'fcan', 'rcan', 'cau', 'cax', 'canr', 'kan', 'dcan', 'canu', 'caon', 'cain', 'ican', 'canv', 'pcan', 'cay', 'caa', 'canp', 'cabn', 'yan', 'acn', 'cac'}.\n",
+      "\tGot: set().\n",
+      "\u001b[92m 2  Tests passed\n",
+      "\u001b[91m 4  Tests failed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_edit_one_letter(edit_one_letter)"
@@ -1496,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,9 +1620,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of strings with edit distance of two: 0\n",
+      "First 10 strings []\n",
+      "Last 10 strings []\n",
+      "The data type of the returned object should be a set <class 'set'>\n",
+      "Number of strings that are 2 edit distances from 'at' is 0\n"
+     ]
+    }
+   ],
    "source": [
     "tmp_edit_two_set = edit_two_letters(\"a\")\n",
     "tmp_edit_two_l = sorted(list(tmp_edit_two_set))\n",
@@ -1552,9 +1662,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong output type.\n",
+      "\tExpected: 2654.\n",
+      "\tGot: 0.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/work/w1_unittest.py\u001b[0m in \u001b[0;36mtest_edit_two_letters\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m   1622\u001b[0m             assert sorted(list(result))[:10] == sorted(\n\u001b[0;32m-> 1623\u001b[0;31m                 \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected_head\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1624\u001b[0m             )\n",
+      "\u001b[0;31mAssertionError\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-3b36c6903fa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw1_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_edit_two_letters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medit_two_letters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/work/w1_unittest.py\u001b[0m in \u001b[0;36mtest_edit_two_letters\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m   1629\u001b[0m                     \u001b[0;34m\"name\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1630\u001b[0m                     \u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected_head\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1631\u001b[0;31m                     \u001b[0;34m\"got\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1632\u001b[0m                 }\n\u001b[1;32m   1633\u001b[0m             )\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_edit_two_letters(edit_two_letters)"
