uploaded new files

--- a/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
@@ -1147,8 +1147,7 @@
     "    split_l = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
-    "    \n",
-    "    len_word=len(word)\n",
+    "\n",
     "    [split_l.append((word[:i],word[i:])) for i in range(len(word))]\n",
     "    replace_l = [L + letter + (R[1:] if len(R)> 1 else '') for L,R in split_l if R for letter in letters]\n",
     "    replace_set=set(replace_l)    \n",
@@ -1308,6 +1307,9 @@
     "    split_l = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    \n",
+    "    [split_l.append((word[:i],word[i:])) for i in range(len(word)+1)]\n",
+    "    insert_l = [L + letter + R for L,R in split_l for letter in letters]\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1322,13 +1324,36 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "[('', 'at'), ('a', 't'), ('at', '')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word='at'\n",
+    "split_l = []\n",
+    "[split_l.append((word[:i],word[i:])) for i in range(len(word)+1)]\n",
+    "split_l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Input word at \n",
-      "split_l = [] \n",
-      "insert_l = []\n",
-      "Number of strings output by insert_letter('at') is 0\n"
+      "split_l = [('', 'at'), ('a', 't'), ('at', '')] \n",
+      "insert_l = ['aat', 'bat', 'cat', 'dat', 'eat', 'fat', 'gat', 'hat', 'iat', 'jat', 'kat', 'lat', 'mat', 'nat', 'oat', 'pat', 'qat', 'rat', 'sat', 'tat', 'uat', 'vat', 'wat', 'xat', 'yat', 'zat', 'aat', 'abt', 'act', 'adt', 'aet', 'aft', 'agt', 'aht', 'ait', 'ajt', 'akt', 'alt', 'amt', 'ant', 'aot', 'apt', 'aqt', 'art', 'ast', 'att', 'aut', 'avt', 'awt', 'axt', 'ayt', 'azt', 'ata', 'atb', 'atc', 'atd', 'ate', 'atf', 'atg', 'ath', 'ati', 'atj', 'atk', 'atl', 'atm', 'atn', 'ato', 'atp', 'atq', 'atr', 'ats', 'att', 'atu', 'atv', 'atw', 'atx', 'aty', 'atz']\n",
+      "Number of strings output by insert_letter('at') is 78\n"
      ]
     }
    ],
@@ -1389,27 +1414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output list do not have the expected number of elements.\n",
-      "\tExpected: 78.\n",
-      "\tGot: 0.\n",
-      "Wrong output values.\n",
-      "\tExpected: ['aat', 'bat', 'cat', 'dat', 'eat', 'fat', 'gat', 'hat', 'iat', 'jat', 'kat', 'lat', 'mat', 'nat', 'oat', 'pat', 'qat', 'rat', 'sat', 'tat', 'uat', 'vat', 'wat', 'xat', 'yat', 'zat', 'aat', 'abt', 'act', 'adt', 'aet', 'aft', 'agt', 'aht', 'ait', 'ajt', 'akt', 'alt', 'amt', 'ant', 'aot', 'apt', 'aqt', 'art', 'ast', 'att', 'aut', 'avt', 'awt', 'axt', 'ayt', 'azt', 'ata', 'atb', 'atc', 'atd', 'ate', 'atf', 'atg', 'ath', 'ati', 'atj', 'atk', 'atl', 'atm', 'atn', 'ato', 'atp', 'atq', 'atr', 'ats', 'att', 'atu', 'atv', 'atw', 'atx', 'aty', 'atz'].\n",
-      "\tGot: [].\n",
-      "Output list do not have the expected number of elements.\n",
-      "\tExpected: 104.\n",
-      "\tGot: 0.\n",
-      "Wrong output values.\n",
-      "\tExpected: ['acan', 'bcan', 'ccan', 'dcan', 'ecan', 'fcan', 'gcan', 'hcan', 'ican', 'jcan', 'kcan', 'lcan', 'mcan', 'ncan', 'ocan', 'pcan', 'qcan', 'rcan', 'scan', 'tcan', 'ucan', 'vcan', 'wcan', 'xcan', 'ycan', 'zcan', 'caan', 'cban', 'ccan', 'cdan', 'cean', 'cfan', 'cgan', 'chan', 'cian', 'cjan', 'ckan', 'clan', 'cman', 'cnan', 'coan', 'cpan', 'cqan', 'cran', 'csan', 'ctan', 'cuan', 'cvan', 'cwan', 'cxan', 'cyan', 'czan', 'caan', 'cabn', 'cacn', 'cadn', 'caen', 'cafn', 'cagn', 'cahn', 'cain', 'cajn', 'cakn', 'caln', 'camn', 'cann', 'caon', 'capn', 'caqn', 'carn', 'casn', 'catn', 'caun', 'cavn', 'cawn', 'caxn', 'cayn', 'cazn', 'cana', 'canb', 'canc', 'cand', 'cane', 'canf', 'cang', 'canh', 'cani', 'canj', 'cank', 'canl', 'canm', 'cann', 'cano', 'canp', 'canq', 'canr', 'cans', 'cant', 'canu', 'canv', 'canw', 'canx', 'cany', 'canz'].\n",
-      "\tGot: [].\n",
-      "\u001b[92m 2  Tests passed\n",
-      "\u001b[91m 4  Tests failed\n"
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -1461,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1542,13 +1554,13 @@
       "\tExpected: 129.\n",
       "\tGot: 0.\n",
       "Wrong output values.\n",
-      "\tExpected: {'rat', 'ot', 'sat', 'an', 'tt', 'ao', 'ati', 'kt', 'alt', 'as', 'lat', 'ft', 'aht', 'aat', 'atx', 'akt', 'ad', 'yt', 'a', 'aw', 'fat', 'atz', 'atp', 'ae', 'iat', 'aft', 'ac', 'qt', 'atc', 'eat', 'st', 'lt', 'ta', 'jt', 'ata', 'apt', 'ato', 'ar', 'et', 'awt', 'ai', 'ag', 'adt', 'av', 'atg', 'atv', 'uat', 'ut', 't', 'gat', 'xt', 'aut', 'ap', 'vt', 'pt', 'az', 'qat', 'aet', 'nt', 'xat', 'aty', 'kat', 'act', 'atw', 'atr', 'au', 'tat', 'ath', 'ats', 'dat', 'bat', 'azt', 'axt', 'oat', 'atn', 'zt', 'att', 'al', 'atu', 'atk', 'ajt', 'aj', 'aqt', 'rt', 'amt', 'am', 'atl', 'it', 'wt', 'atj', 'agt', 'dt', 'ah', 'gt', 'ax', 'hat', 'aq', 'yat', 'atb', 'atq', 'abt', 'atd', 'ht', 'ct', 'ab', 'aa', 'nat', 'ak', 'ast', 'mt', 'avt', 'vat', 'ay', 'mat', 'af', 'aot', 'pat', 'atf', 'ayt', 'cat', 'bt', 'ant', 'zat', 'ait', 'art', 'atm', 'ate', 'jat', 'wat'}.\n",
+      "\tExpected: {'as', 'atl', 'zt', 'wat', 'lt', 'atu', 'ta', 'ft', 'st', 'ath', 'ab', 'aq', 'al', 'ay', 'atq', 'akt', 'uat', 'ate', 'tt', 'et', 'kat', 'xt', 'agt', 'atk', 'atd', 'atm', 'ot', 'hat', 'art', 'kt', 'rat', 'alt', 'ao', 'au', 'atg', 'aet', 't', 'cat', 'atr', 'ar', 'aht', 'ajt', 'aa', 'vat', 'gat', 'pat', 'dt', 'ata', 'ad', 'aw', 'tat', 'af', 'a', 'axt', 'wt', 'gt', 'ut', 'ant', 'bat', 'aqt', 'vt', 'an', 'att', 'aot', 'xat', 'amt', 'ast', 'lat', 'jat', 'ap', 'it', 'qt', 'eat', 'ac', 'av', 'apt', 'atb', 'aty', 'yat', 'atw', 'rt', 'aft', 'ats', 'nat', 'ag', 'atc', 'awt', 'ct', 'qat', 'atz', 'nt', 'zat', 'azt', 'fat', 'aat', 'ah', 'ak', 'sat', 'atv', 'jt', 'ht', 'pt', 'ato', 'am', 'iat', 'dat', 'atx', 'oat', 'abt', 'aj', 'adt', 'ax', 'aut', 'mat', 'yt', 'ae', 'atf', 'ati', 'atj', 'avt', 'act', 'ait', 'az', 'atn', 'ai', 'ayt', 'bt', 'atp', 'mt'}.\n",
       "\tGot: set().\n",
       "Wrong number of elements in the returned set.\n",
       "\tExpected: 181.\n",
       "\tGot: 0.\n",
       "Wrong output values.\n",
-      "\tExpected: {'cav', 'ucan', 'czn', 'cjn', 'ecan', 'cam', 'ctn', 'cany', 'csn', 'hcan', 'canq', 'an', 'cann', 'man', 'cadn', 'cacn', 'han', 'cun', 'cwan', 'cano', 'cazn', 'chan', 'cfn', 'qcan', 'acan', 'cran', 'lcan', 'caqn', 'zan', 'cmn', 'ncan', 'cahn', 'cnn', 'mcan', 'san', 'cani', 'ccn', 'con', 'cxan', 'lan', 'canh', 'caln', 'czan', 'ian', 'cawn', 'ocan', 'cajn', 'cean', 'cln', 'scan', 'cai', 'cas', 'caf', 'camn', 'caq', 'cban', 'ccan', 'tan', 'cak', 'jcan', 'gan', 'cin', 'cqan', 'cap', 'coan', 'cank', 'canw', 'cal', 'wan', 'cpan', 'aan', 'capn', 'casn', 'ckn', 'cayn', 'cdan', 'cavn', 'caz', 'cpn', 'cvn', 'jan', 'cbn', 'cdn', 'cn', 'cjan', 'ran', 'ban', 'cand', 'cnan', 'van', 'cyn', 'ckan', 'cafn', 'cian', 'cyan', 'cfan', 'kcan', 'canb', 'ycan', 'vcan', 'nan', 'cans', 'oan', 'cae', 'cagn', 'caan', 'ctan', 'cna', 'fan', 'dan', 'cqn', 'csan', 'canl', 'cakn', 'cag', 'bcan', 'caw', 'canf', 'cgn', 'cxn', 'xcan', 'cah', 'cang', 'cwn', 'cao', 'cuan', 'tcan', 'caj', 'catn', 'cvan', 'clan', 'canc', 'wcan', 'ca', 'caxn', 'carn', 'pan', 'canz', 'canj', 'cane', 'car', 'chn', 'qan', 'zcan', 'cana', 'cad', 'cgan', 'uan', 'caun', 'gcan', 'canm', 'canx', 'cen', 'crn', 'cman', 'caen', 'ean', 'xan', 'cat', 'cant', 'cab', 'fcan', 'rcan', 'cau', 'cax', 'canr', 'kan', 'dcan', 'canu', 'caon', 'cain', 'ican', 'canv', 'pcan', 'cay', 'caa', 'canp', 'cabn', 'yan', 'acn', 'cac'}.\n",
+      "\tExpected: {'wcan', 'cwan', 'cjn', 'cln', 'ican', 'dcan', 'caon', 'fcan', 'canw', 'cian', 'cacn', 'casn', 'cawn', 'cqn', 'han', 'lan', 'ctn', 'cen', 'cao', 'ran', 'cfan', 'ncan', 'cyn', 'cxan', 'cban', 'chn', 'canp', 'caxn', 'caw', 'gcan', 'canf', 'cah', 'vcan', 'cxn', 'cak', 'ean', 'clan', 'cany', 'cana', 'canz', 'yan', 'cin', 'acan', 'coan', 'cann', 'oan', 'caf', 'cavn', 'canb', 'cahn', 'cgn', 'mcan', 'zcan', 'canu', 'cgan', 'canv', 'cat', 'cad', 'pan', 'canl', 'caun', 'xan', 'cpan', 'cab', 'canj', 'zan', 'ocan', 'cman', 'xcan', 'ca', 'cas', 'tan', 'qan', 'canq', 'qcan', 'cai', 'cap', 'ecan', 'cqan', 'caj', 'caa', 'chan', 'cayn', 'cans', 'wan', 'cagn', 'csan', 'an', 'cac', 'catn', 'cn', 'fan', 'rcan', 'canm', 'cav', 'cjan', 'camn', 'van', 'capn', 'canx', 'cwn', 'cna', 'hcan', 'ckan', 'caz', 'dan', 'cang', 'csn', 'canh', 'gan', 'cazn', 'czan', 'cand', 'cyan', 'caqn', 'ban', 'cnn', 'car', 'cant', 'cmn', 'lcan', 'cau', 'cank', 'cnan', 'ctan', 'cvan', 'cakn', 'tcan', 'ucan', 'bcan', 'acn', 'cuan', 'cean', 'cfn', 'cax', 'caq', 'cabn', 'jan', 'cajn', 'cvn', 'cdn', 'ycan', 'ckn', 'cae', 'caan', 'cam', 'cani', 'cbn', 'caln', 'con', 'czn', 'san', 'cadn', 'cano', 'cay', 'kcan', 'kan', 'pcan', 'uan', 'carn', 'crn', 'ccn', 'cag', 'jcan', 'man', 'scan', 'aan', 'cain', 'cdan', 'cpn', 'canc', 'cane', 'cun', 'nan', 'cafn', 'ian', 'caen', 'ccan', 'cran', 'canr', 'cal'}.\n",
       "\tGot: set().\n",
       "\u001b[92m 2  Tests passed\n",
       "\u001b[91m 4  Tests failed\n"
@@ -1594,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1697,7 @@
       "\u001b[0;31mAssertionError\u001b[0m: ",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-3b36c6903fa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw1_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_edit_two_letters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medit_two_letters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-32-3b36c6903fa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw1_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_edit_two_letters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medit_two_letters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/work/w1_unittest.py\u001b[0m in \u001b[0;36mtest_edit_two_letters\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m   1629\u001b[0m                     \u001b[0;34m\"name\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1630\u001b[0m                     \u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected_head\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1631\u001b[0;31m                     \u001b[0;34m\"got\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1632\u001b[0m                 }\n\u001b[1;32m   1633\u001b[0m             )\n",
       "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
      ]
