--- a/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Assignment.ipynb
@@ -1482,19 +1482,29 @@
     "def edit_one_letter(word, allow_switches = True):\n",
     "    \"\"\"\n",
     "    Input:\n",
-    "        word: the string/word for which we will generate all possible wordsthat are one edit away.\n",
+    "        word: the string/word for which we will generate all possible words that are one edit away.\n",
     "    Output:\n",
     "        edit_one_set: a set of words with one possible edit. Please return a set. and not a list.\n",
     "    \"\"\"\n",
     "    \n",
     "    edit_one_set = set()\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    ### START CODE HERE ###\n",
+    "    \n",
+    "    switch_l = []\n",
+    "    \n",
+    "    delete_l = delete_letter(word, verbose=False)\n",
+    "    insert_l = insert_letter(word, verbose=False)\n",
+    "    replace_l = replace_letter(word, verbose=False)\n",
+    "    if allow_switches:\n",
+    "        switch_l = switch_letter(word, verbose=False)   \n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # return this as a set and not a list\n",
-    "    return set(edit_one_set)"
+    "    return set(delete_l+insert_l+replace_l+switch_l)"
    ]
   },
   {
@@ -1508,10 +1518,10 @@
      "text": [
       "input word at \n",
       "edit_one_l \n",
-      "[]\n",
+      "['a', 'aa', 'aat', 'ab', 'abt', 'ac', 'act', 'ad', 'adt', 'ae', 'aet', 'af', 'aft', 'ag', 'agt', 'ah', 'aht', 'ai', 'ait', 'aj', 'ajt', 'ak', 'akt', 'al', 'alt', 'am', 'amt', 'an', 'ant', 'ao', 'aot', 'ap', 'apt', 'aq', 'aqt', 'ar', 'art', 'as', 'ast', 'ata', 'atb', 'atc', 'atd', 'ate', 'atf', 'atg', 'ath', 'ati', 'atj', 'atk', 'atl', 'atm', 'atn', 'ato', 'atp', 'atq', 'atr', 'ats', 'att', 'atu', 'atv', 'atw', 'atx', 'aty', 'atz', 'au', 'aut', 'av', 'avt', 'aw', 'awt', 'ax', 'axt', 'ay', 'ayt', 'az', 'azt', 'bat', 'bt', 'cat', 'ct', 'dat', 'dt', 'eat', 'et', 'fat', 'ft', 'gat', 'gt', 'hat', 'ht', 'iat', 'it', 'jat', 'jt', 'kat', 'kt', 'lat', 'lt', 'mat', 'mt', 'nat', 'nt', 'oat', 'ot', 'pat', 'pt', 'qat', 'qt', 'rat', 'rt', 'sat', 'st', 't', 'ta', 'tat', 'tt', 'uat', 'ut', 'vat', 'vt', 'wat', 'wt', 'xat', 'xt', 'yat', 'yt', 'zat', 'zt']\n",
       "\n",
       "The type of the returned object should be a set <class 'set'>\n",
-      "Number of outputs from edit_one_letter('at') is 0\n"
+      "Number of outputs from edit_one_letter('at') is 129\n"
      ]
     }
    ],
@@ -1550,20 +1560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrong number of elements in the returned set.\n",
-      "\tExpected: 129.\n",
-      "\tGot: 0.\n",
-      "Wrong output values.\n",
-      "\tExpected: {'as', 'atl', 'zt', 'wat', 'lt', 'atu', 'ta', 'ft', 'st', 'ath', 'ab', 'aq', 'al', 'ay', 'atq', 'akt', 'uat', 'ate', 'tt', 'et', 'kat', 'xt', 'agt', 'atk', 'atd', 'atm', 'ot', 'hat', 'art', 'kt', 'rat', 'alt', 'ao', 'au', 'atg', 'aet', 't', 'cat', 'atr', 'ar', 'aht', 'ajt', 'aa', 'vat', 'gat', 'pat', 'dt', 'ata', 'ad', 'aw', 'tat', 'af', 'a', 'axt', 'wt', 'gt', 'ut', 'ant', 'bat', 'aqt', 'vt', 'an', 'att', 'aot', 'xat', 'amt', 'ast', 'lat', 'jat', 'ap', 'it', 'qt', 'eat', 'ac', 'av', 'apt', 'atb', 'aty', 'yat', 'atw', 'rt', 'aft', 'ats', 'nat', 'ag', 'atc', 'awt', 'ct', 'qat', 'atz', 'nt', 'zat', 'azt', 'fat', 'aat', 'ah', 'ak', 'sat', 'atv', 'jt', 'ht', 'pt', 'ato', 'am', 'iat', 'dat', 'atx', 'oat', 'abt', 'aj', 'adt', 'ax', 'aut', 'mat', 'yt', 'ae', 'atf', 'ati', 'atj', 'avt', 'act', 'ait', 'az', 'atn', 'ai', 'ayt', 'bt', 'atp', 'mt'}.\n",
-      "\tGot: set().\n",
-      "Wrong number of elements in the returned set.\n",
-      "\tExpected: 181.\n",
-      "\tGot: 0.\n",
-      "Wrong output values.\n",
-      "\tExpected: {'wcan', 'cwan', 'cjn', 'cln', 'ican', 'dcan', 'caon', 'fcan', 'canw', 'cian', 'cacn', 'casn', 'cawn', 'cqn', 'han', 'lan', 'ctn', 'cen', 'cao', 'ran', 'cfan', 'ncan', 'cyn', 'cxan', 'cban', 'chn', 'canp', 'caxn', 'caw', 'gcan', 'canf', 'cah', 'vcan', 'cxn', 'cak', 'ean', 'clan', 'cany', 'cana', 'canz', 'yan', 'cin', 'acan', 'coan', 'cann', 'oan', 'caf', 'cavn', 'canb', 'cahn', 'cgn', 'mcan', 'zcan', 'canu', 'cgan', 'canv', 'cat', 'cad', 'pan', 'canl', 'caun', 'xan', 'cpan', 'cab', 'canj', 'zan', 'ocan', 'cman', 'xcan', 'ca', 'cas', 'tan', 'qan', 'canq', 'qcan', 'cai', 'cap', 'ecan', 'cqan', 'caj', 'caa', 'chan', 'cayn', 'cans', 'wan', 'cagn', 'csan', 'an', 'cac', 'catn', 'cn', 'fan', 'rcan', 'canm', 'cav', 'cjan', 'camn', 'van', 'capn', 'canx', 'cwn', 'cna', 'hcan', 'ckan', 'caz', 'dan', 'cang', 'csn', 'canh', 'gan', 'cazn', 'czan', 'cand', 'cyan', 'caqn', 'ban', 'cnn', 'car', 'cant', 'cmn', 'lcan', 'cau', 'cank', 'cnan', 'ctan', 'cvan', 'cakn', 'tcan', 'ucan', 'bcan', 'acn', 'cuan', 'cean', 'cfn', 'cax', 'caq', 'cabn', 'jan', 'cajn', 'cvn', 'cdn', 'ycan', 'ckn', 'cae', 'caan', 'cam', 'cani', 'cbn', 'caln', 'con', 'czn', 'san', 'cadn', 'cano', 'cay', 'kcan', 'kan', 'pcan', 'uan', 'carn', 'crn', 'ccn', 'cag', 'jcan', 'man', 'scan', 'aan', 'cain', 'cdan', 'cpn', 'canc', 'cane', 'cun', 'nan', 'cafn', 'ian', 'caen', 'ccan', 'cran', 'canr', 'cal'}.\n",
-      "\tGot: set().\n",
-      "\u001b[92m 2  Tests passed\n",
-      "\u001b[91m 4  Tests failed\n"
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -1623,6 +1620,14 @@
     "    edit_two_set = set()\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    \n",
+    "    edit_one = edit_one_letter(word, allow_switches = True)\n",
+    "\n",
+    "    for w in edit_one:\n",
+    "        if w:\n",
+    "            edit_two = edit_one_letter(w,allow_switches=allow_switches)\n",
+    "            edit_two_set.update(edit_two)\n",
+    "    \n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1639,11 +1644,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of strings with edit distance of two: 0\n",
-      "First 10 strings []\n",
-      "Last 10 strings []\n",
+      "Number of strings with edit distance of two: 2654\n",
+      "First 10 strings ['', 'a', 'aa', 'aaa', 'aab', 'aac', 'aad', 'aae', 'aaf', 'aag']\n",
+      "Last 10 strings ['zv', 'zva', 'zw', 'zwa', 'zx', 'zxa', 'zy', 'zya', 'zz', 'zza']\n",
       "The data type of the returned object should be a set <class 'set'>\n",
-      "Number of strings that are 2 edit distances from 'at' is 0\n"
+      "Number of strings that are 2 edit distances from 'at' is 7154\n"
      ]
     }
    ],
@@ -1682,24 +1687,13 @@
      "output_type": "stream",
      "text": [
       "Wrong output type.\n",
-      "\tExpected: 2654.\n",
-      "\tGot: 0.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'set' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m~/work/w1_unittest.py\u001b[0m in \u001b[0;36mtest_edit_two_letters\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m   1622\u001b[0m             assert sorted(list(result))[:10] == sorted(\n\u001b[0;32m-> 1623\u001b[0;31m                 \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected_head\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1624\u001b[0m             )\n",
-      "\u001b[0;31mAssertionError\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-3b36c6903fa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw1_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_edit_two_letters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medit_two_letters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/work/w1_unittest.py\u001b[0m in \u001b[0;36mtest_edit_two_letters\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m   1629\u001b[0m                     \u001b[0;34m\"name\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1630\u001b[0m                     \u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected_head\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1631\u001b[0;31m                     \u001b[0;34m\"got\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1632\u001b[0m                 }\n\u001b[1;32m   1633\u001b[0m             )\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+      "\tExpected: 7130.\n",
+      "\tGot: 7154.\n",
+      "Wrong output type.\n",
+      "\tExpected: 14206.\n",
+      "\tGot: 14351.\n",
+      "\u001b[92m 18  Tests passed\n",
+      "\u001b[91m 2  Tests failed\n"
      ]
     }
    ],
@@ -1743,9 +1737,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['a', 'b']\n",
+      "['Most', 'Likely']\n",
+      "['least', 'of', 'all']\n"
+     ]
+    }
+   ],
    "source": [
     "# example of logical operation on lists or sets\n",
     "print( [] and [\"a\",\"b\"] )\n",
@@ -1791,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,9 +1835,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entered word =  dys \n",
+      "suggestions =  None\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-200294f91d52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmy_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'dys'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtmp_corrections\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_corrections\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_word\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# keep verbose=True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_prob\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp_corrections\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"word {i}: {word_prob[0]}, probability {word_prob[1]:.6f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# Test your implementation - feel free to try other words in my word\n",
     "my_word = 'dys' \n",
