--- a/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Autocorrect_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 1/Python Notebooks/C2_W1_Autocorrect_Assignment.ipynb
@@ -231,12 +231,12 @@
     "    #Open the file, read its contents into a string variable\n",
     "    \n",
     "    with open(file_name,'r') as file:\n",
-    "        text = file.read()\n",
+    "        \n",
+    "        # Convert every word to lower case\n",
+    "        text = file.read().lower()\n",
+    "     \n",
+    "    # Return them in a list.\n",
     "    \n",
-    "    # convert all letters to lower case\n",
-    "    #Convert every word to lower case and return them in a list.\n",
-    "    \n",
-    "    text = text.lower()\n",
     "    words = re.findall('\\w+',text)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
@@ -394,7 +394,9 @@
     "    \n",
     "    word_count_dict = {}  # fill this with word counts\n",
     "    ### START CODE HERE \n",
-    "    word_count_dict = dict(Counter(word_l))       \n",
+    "    \n",
+    "    word_count_dict = dict(Counter(word_l))  \n",
+    "    \n",
     "    ### END CODE HERE ### \n",
     "    return word_count_dict"
    ]
@@ -1621,8 +1623,8 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
-    "    edit_one = edit_one_letter(word, allow_switches = True)\n",
-    "\n",
+    "    edit_one = edit_one_letter(word,allow_switches=allow_switches)\n",
+    "    \n",
     "    for w in edit_one:\n",
     "        if w:\n",
     "            edit_two = edit_one_letter(w,allow_switches=allow_switches)\n",
@@ -1686,14 +1688,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrong output type.\n",
-      "\tExpected: 7130.\n",
-      "\tGot: 7154.\n",
-      "Wrong output type.\n",
-      "\tExpected: 14206.\n",
-      "\tGot: 14351.\n",
-      "\u001b[92m 18  Tests passed\n",
-      "\u001b[91m 2  Tests failed\n"
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -1802,7 +1797,7 @@
    "source": [
     "# UNIT TEST COMMENT: Candidate for Table Driven Tests\n",
     "# UNQ_C10 GRADED FUNCTION: get_corrections\n",
-    "def get_corrections(word, probs, vocab, n=2, verbose = False):\n",
+    "def get_corrections(word, probs, vocab, n=2, verbose = True):\n",
     "    '''\n",
     "    Input: \n",
     "        word: a user entered string to check for suggestions\n",
@@ -1817,14 +1812,15 @@
     "    n_best = []\n",
     "    \n",
     "    ### START CODE HERE ###\n",
-    "    #Step 1: create suggestions as described above    \n",
-    "    suggestions = None\n",
+    "    #Step 1: create suggestions as described above \n",
+    "    \n",
+    "    suggestions = list((word in vocab and word) or edit_one_letter(word).intersection(vocab) or edit_two_letters(word).intersection(vocab))\n",
     "                    \n",
     "    #Step 2: determine probability of suggestions\n",
     "    \n",
     "    #Step 3: Get all your best words and return the most probable top n_suggested words as n_best\n",
     "    \n",
-    "    n_best = None\n",
+    "    n_best = [[s,probs[s]] for s in list(reversed(suggestions))]\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1843,18 +1839,10 @@
      "output_type": "stream",
      "text": [
       "entered word =  dys \n",
-      "suggestions =  None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-200294f91d52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmy_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'dys'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtmp_corrections\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_corrections\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_word\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# keep verbose=True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_prob\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp_corrections\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"word {i}: {word_prob[0]}, probability {word_prob[1]:.6f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "suggestions =  ['days', 'dye']\n",
+      "word 0: dye, probability 0.000019\n",
+      "word 1: days, probability 0.000410\n",
+      "data type of corrections <class 'list'>\n"
      ]
     }
    ],
@@ -1886,9 +1874,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entered word =  dys \n",
+      "suggestions =  ['days', 'dye']\n",
+      "entered word =  satr \n",
+      "suggestions =  ['star', 'sat']\n",
+      "entered word =  san \n",
+      "suggestions =  ['sap', 'man', 'sin', 'sad', 'say', 'sang', 'can', 'sun', 'an', 'son', 'fan', 'saw', 'sat', 'wan', 'tan']\n",
+      "Wrong output length.\n",
+      "\tExpected: 5.\n",
+      "\tGot: 15.\n",
+      "Wrong output values.\n",
+      "\tExpected: [('say', 0.0019770955347483865), ('can', 0.0019211400007460738), ('an', 0.0017719252434065728), ('man', 0.0013242809713880702), ('son', 0.0007274219420300668)].\n",
+      "\tGot: [['tan', 1.865184466743761e-05], ['wan', 1.865184466743761e-05], ['sat', 5.595553400231283e-05], ['saw', 0.0002797776700115641], ['fan', 3.730368933487522e-05], ['son', 0.0007274219420300668], ['an', 0.0017719252434065728], ['sun', 0.0002797776700115641], ['can', 0.0019211400007460738], ['sang', 1.865184466743761e-05], ['say', 0.0019770955347483865], ['sad', 0.00026112582534412656], ['sin', 0.00026112582534412656], ['man', 0.0013242809713880702], ['sap', 1.865184466743761e-05]].\n",
+      "\u001b[92m 7  Tests passed\n",
+      "\u001b[91m 2  Tests failed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_get_corrections(get_corrections, probs, vocab)"
@@ -2126,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,34 +2161,34 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Fill in column 0, from row 1 to row m, both inclusive\n",
-    "    for row in range(None,None): # Replace None with the proper range\n",
-    "        D[row,0] = None\n",
+    "    for row in range(1,m+1): # Replace None with the proper range\n",
+    "        D[row,0] = D[row-1,0] + del_cost\n",
     "        \n",
     "    # Fill in row 0, for all columns from 1 to n, both inclusive\n",
-    "    for col in range(None,None): # Replace None with the proper range\n",
-    "        D[0,col] = None\n",
+    "    for col in range(1,n+1): # Replace None with the proper range\n",
+    "        D[0,col] = D[0,col-1] + ins_cost\n",
     "        \n",
     "    # Loop through row 1 to row m, both inclusive\n",
-    "    for row in range(None,None):\n",
+    "    for row in range(1,m+1):\n",
     "        \n",
     "        # Loop through column 1 to column n, both inclusive\n",
-    "        for col in range(None,None):\n",
+    "        for col in range(1,n+1):\n",
     "            \n",
     "            # Intialize r_cost to the 'replace' cost that is passed into this function\n",
-    "            r_cost = None\n",
+    "            r_cost = rep_cost\n",
     "            \n",
     "            # Check to see if source character at the previous row\n",
     "            # matches the target character at the previous column, \n",
-    "            if None: # Replace None with a proper comparison\n",
+    "            if source[row-1] == target[col-1]: # Replace None with a proper comparison\n",
     "                # Update the replacement cost to 0 if source and target are the same\n",
-    "                r_cost = None\n",
+    "                r_cost = 0\n",
     "                \n",
     "            # Update the cost at row, col based on previous entries in the cost matrix\n",
     "            # Refer to the equation calculate for D[i,j] (the minimum of three calculated costs)\n",
-    "            D[row,col] = None\n",
+    "            D[row,col] = min([D[row-1,col]+del_cost, D[row,col-1]+ins_cost, D[row-1,col-1]+r_cost])\n",
     "            \n",
     "    # Set the minimum edit distance with the cost found at row m, column n \n",
-    "    med = None\n",
+    "    med = D[m,n]\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return D, med"
@@ -2187,9 +2196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minimum edits:  4 \n",
+      "\n",
+      "   #  s  t  a  y\n",
+      "#  0  1  2  3  4\n",
+      "p  1  2  3  4  5\n",
+      "l  2  3  4  5  6\n",
+      "a  3  4  5  4  5\n",
+      "y  4  5  6  5  4\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL\n",
     "# testing your implementation \n",
@@ -2223,12 +2247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minimum edits:  3 \n",
+      "\n",
+      "   #  n  e  a  r\n",
+      "#  0  1  2  3  4\n",
+      "e  1  2  1  2  3\n",
+      "e  2  3  2  3  4\n",
+      "r  3  4  3  4  3\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL\n",
     "# testing your implementation \n",
@@ -2262,9 +2300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_min_edit_distance(min_edit_distance)"
@@ -2279,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2304,9 +2350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eer eer 0\n"
+     ]
+    }
+   ],
    "source": [
     "source = \"eer\"\n",
     "targets = edit_two_letters(source,allow_switches = False) #disable switches since min_edit_distance does not include them\n",
@@ -2352,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
