modified:   C2-Natural Language Processing with Probabilistic Models/Week 3/Python Notebooks/C2_W3_Assignment.ipynb

--- a/C2-Natural Language Processing with Probabilistic Models/Week 3/Python Notebooks/C2_W3_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 3/Python Notebooks/C2_W3_Assignment.ipynb
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,18 +678,18 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Loop through each sentence\n",
-    "    for sentence in None: # complete this line\n",
+    "    for sentence in tokenized_sentences: # complete this line\n",
     "        \n",
     "        # Go through each token in the sentence\n",
-    "        for token in None: # complete this line\n",
+    "        for token in sentence: # complete this line\n",
     "\n",
     "            # If the token is not in the dictionary yet, set the count to 1\n",
-    "            if None: # complete this line with the proper condition\n",
-    "                word_counts[token] = None\n",
+    "            if token not in word_counts: # complete this line with the proper condition\n",
+    "                word_counts[token] = 1\n",
     "            \n",
     "            # If the token is already in the dictionary, increment the count by 1\n",
     "            else:\n",
-    "                word_counts[token] += None\n",
+    "                word_counts[token] += 1\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -698,9 +698,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sky': 1,\n",
+       " 'is': 1,\n",
+       " 'blue': 1,\n",
+       " '.': 3,\n",
+       " 'leaves': 1,\n",
+       " 'are': 2,\n",
+       " 'green': 1,\n",
+       " 'roses': 1,\n",
+       " 'red': 1}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# test your code\n",
     "tokenized_sentences = [['sky', 'is', 'blue', '.'],\n",
@@ -732,9 +751,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w3_unittest.test_count_words(count_words)"
@@ -773,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +821,7 @@
     "    # appear at least 'minimum_freq' times.\n",
     "    closed_vocab = []\n",
     "    \n",
-    "    # Get the word couts of the tokenized sentences\n",
+    "    # Get the word counts of the tokenized sentences\n",
     "    # Use the function that you defined earlier to count the words\n",
     "    word_counts = count_words(tokenized_sentences)\n",
     "    \n",
@@ -803,14 +830,14 @@
     "#   filtered_words = None\n",
     "\n",
     "    # for each word and its count\n",
-    "    for word, cnt in None: # complete this line\n",
+    "    for word, cnt in word_counts.items(): # complete this line\n",
     "        \n",
     "        # check that the word's count\n",
     "        # is at least as great as the minimum count\n",
-    "        if None: # complete this line with the proper condition\n",
+    "        if cnt >= count_threshold: # complete this line with the proper condition\n",
     "            \n",
     "            # append the word to the list\n",
-    "            None\n",
+    "            closed_vocab.append(word)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return closed_vocab"
@@ -818,9 +845,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closed vocabulary:\n",
+      "['.', 'are']\n"
+     ]
+    }
+   ],
    "source": [
     "# test your code\n",
     "tokenized_sentences = [['sky', 'is', 'blue', '.'],\n",
@@ -845,9 +881,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w3_unittest.test_get_words_with_nplus_frequency(get_words_with_nplus_frequency)"
