modified:   .DS_Store 	modified:   C2-Natural Language Processing with Probabilistic Models/.DS_Store 	modified:   C2-Natural Language Processing with Probabilistic Models/Week 4/Python Notebooks/.DS_Store 	modified:   C2-Natural Language Processing with Probabilistic Models/Week 4/Python Notebooks/C2_W4_Assignment.ipynb 	new file:   C2-Natural Language Processing with Probabilistic Models/Week 4/Python Notebooks/C2_W4_Word_Embeddings_Assignment.ipynb 	new file:   C2-Natural Language Processing with Probabilistic Models/Week 4/Python Notebooks/data/shakespeare.txt 	new file:   C3-Natural Language Processing with Sequence Models/.DS_Store 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/.DS_Store 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Dense Layers and ReLU | Coursera.pdf 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Embedding and Mean Layers | Coursera.pdf 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Neural Networks for Sentiment Analysis | Coursera.pdf 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/.DS_Store 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Practice_Assignment.ipynb 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_TensorFlow_Tutorial.ipynb 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/images/nn.jpg 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/images/relu.jpg 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/images/sigmoid.jpg 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/utils.py 	new file:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/w1_unittest.py

--- a/C2-Natural Language Processing with Probabilistic Models/Week 4/Python Notebooks/C2_W4_Assignment.ipynb
+++ b/C2-Natural Language Processing with Probabilistic Models/Week 4/Python Notebooks/C2_W4_Assignment.ipynb
@@ -112,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,9 +667,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp_x.shape (5778, 4)\n",
+      "tmp_y.shape (5778, 4)\n",
+      "tmp_W1.shape (50, 5778)\n",
+      "tmp_W2.shape (5778, 50)\n",
+      "tmp_b1.shape (50, 1)\n",
+      "tmp_b2.shape (5778, 1)\n",
+      "tmp_z.shape: (5778, 4)\n",
+      "tmp_h.shape: (50, 4)\n",
+      "tmp_yhat.shape: (5778, 4)\n",
+      "call compute_cost\n",
+      "tmp_cost 10.5788\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the function\n",
     "tmp_C = 2\n",
@@ -743,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +786,7 @@
     "    ### START CODE HERE (Replace instanes of 'None' with your code) ###\n",
     "    \n",
     "    # Compute l1 as W2^T (Yhat - Y)\n",
-    "    l1 = None\n",
+    "    l1 = np.dot(W2.T,yhat-y)\n",
     "\n",
     "    # if z1 < 0, then l1 = 0\n",
     "    # otherwise l1 = l1\n",
@@ -777,16 +795,16 @@
     "    l1[z1 < 0] = 0 # use \"l1\" to compute gradients below\n",
     "\n",
     "    # compute the gradient for W1\n",
-    "    grad_W1 = None\n",
+    "    grad_W1 = np.dot(l1,x.T)/batch_size\n",
     "\n",
     "    # Compute gradient of W2\n",
-    "    grad_W2 = None\n",
+    "    grad_W2 = np.dot(yhat-y,h.T)/batch_size\n",
     "    \n",
     "    # compute gradient for b1\n",
-    "    grad_b1 = None\n",
+    "    grad_b1 = np.sum(l1, axis=1, keepdims=True)/batch_size\n",
     "\n",
     "    # compute gradient for b2\n",
-    "    grad_b2 = None\n",
+    "    grad_b2 = np.sum((yhat-y), axis=1, keepdims=True)/batch_size\n",
     "    ### END CODE HERE ####\n",
     "    \n",
     "    return grad_W1, grad_W2, grad_b1, grad_b2"
@@ -794,9 +812,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get a batch of data\n",
+      "tmp_x.shape (5778, 4)\n",
+      "tmp_y.shape (5778, 4)\n",
+      "\n",
+      "Initialize weights and biases\n",
+      "tmp_W1.shape (50, 5778)\n",
+      "tmp_W2.shape (5778, 50)\n",
+      "tmp_b1.shape (50, 1)\n",
+      "tmp_b2.shape (5778, 1)\n",
+      "\n",
+      "Forwad prop to get z and h\n",
+      "tmp_z.shape: (5778, 4)\n",
+      "tmp_h.shape: (50, 4)\n",
+      "\n",
+      "Get yhat by calling softmax\n",
+      "tmp_yhat.shape: (5778, 4)\n",
+      "\n",
+      "call back_prop\n",
+      "tmp_grad_W1.shape (50, 5778)\n",
+      "tmp_grad_W2.shape (5778, 50)\n",
+      "tmp_grad_b1.shape (50, 1)\n",
+      "tmp_grad_b2.shape (5778, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the function\n",
     "tmp_C = 2\n",
@@ -878,9 +925,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_back_prop(back_prop)"
