modified:   C4-Natural Language Processing with Attention Models/Week 1/.DS_Store 	modified:   C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb

--- a/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
+++ b/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "74e71f3d",
    "metadata": {
     "deletable": false,
@@ -658,9 +658,9 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        self.mha = ( \n",
-    "            tf.keras.layers.None(\n",
-    "                key_dim=None,\n",
-    "                num_heads=None\n",
+    "            tf.keras.layers.MultiHeadAttention(\n",
+    "                key_dim=units,\n",
+    "                num_heads=1\n",
     "            ) \n",
     "        )  \n",
     "\n",
@@ -684,9 +684,9 @@
     "        # Call the MH attention by passing in the query and value\n",
     "        # For this case the query should be the translation and the value the encoded sentence to translate\n",
     "        # Hint: Check the call arguments of MultiHeadAttention in the docs\n",
-    "        attn_output = None(\n",
-    "            query=None,\n",
-    "            value=None\n",
+    "        attn_output = self.mha(\n",
+    "            query=target,\n",
+    "            value=context\n",
     "        )  \n",
     "\n",
     "        ### END CODE HERE ###\n",
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4c62796f",
    "metadata": {
     "deletable": false,
@@ -709,7 +709,17 @@
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor of contexts has shape: (64, 14, 256)\n",
+      "Tensor of translations has shape: (64, 15, 256)\n",
+      "Tensor of attention scores has shape: (64, 15, 256)\n"
+     ]
+    }
+   ],
    "source": [
     "# Do a quick check of your implementation\n",
     "\n",
@@ -744,14 +754,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4f658975",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your code!\n",
     "\n",
