modified:   C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb

--- a/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
+++ b/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e9639bdb",
    "metadata": {
     "deletable": false,
@@ -828,32 +828,32 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # The embedding layer\n",
-    "        self.embedding = tf.keras.layers.None(\n",
-    "            input_dim=None,\n",
-    "            output_dim=None,\n",
-    "            mask_zero=None\n",
+    "        self.embedding = tf.keras.layers.Embedding(\n",
+    "            input_dim=vocab_size,\n",
+    "            output_dim=units,\n",
+    "            mask_zero=True\n",
     "        )  \n",
     "\n",
     "        # The RNN before attention\n",
-    "        self.pre_attention_rnn = tf.keras.layers.None(\n",
-    "            units=None,\n",
-    "            return_sequences=None,\n",
-    "            return_state=None\n",
+    "        self.pre_attention_rnn = tf.keras.layers.LSTM(\n",
+    "            units=units,\n",
+    "            return_sequences=True,\n",
+    "            return_state=True\n",
     "        )  \n",
     "\n",
     "        # The attention layer\n",
-    "        self.attention = None(None)\n",
+    "        self.attention = CrossAttention(units)\n",
     "\n",
     "        # The RNN after attention\n",
-    "        self.post_attention_rnn = tf.keras.layers.None(\n",
-    "            units=None,\n",
-    "            return_sequences=None\n",
+    "        self.post_attention_rnn = tf.keras.layers.LSTM(\n",
+    "            units=units,\n",
+    "            return_sequences=False\n",
     "        )  \n",
     "\n",
     "        # The dense layer with logsoftmax activation\n",
-    "        self.output_layer = tf.keras.layers.None(\n",
-    "            units=None,\n",
-    "            activation=None\n",
+    "        self.output_layer = tf.keras.layers.Dense(\n",
+    "            units=vocab_size,\n",
+    "            activation=tf.nn.log_softmax\n",
     "        )  \n",
     "\n",
     "        ### END CODE HERE ###\n",
@@ -873,22 +873,22 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # Get the embedding of the input\n",
-    "        x = self.None(None)\n",
+    "        x = self.embedding(target)\n",
     "\n",
     "        # Pass the embedded input into the pre attention LSTM\n",
     "        # Hints:\n",
     "        # - The LSTM you defined earlier should return the output alongside the state (made up of two tensors)\n",
     "        # - Pass in the state to the LSTM (needed for inference)\n",
-    "        x, hidden_state, cell_state = self.None(None, initial_state=None)\n",
+    "        x, hidden_state, cell_state = self.pre_attention_rnn(x)\n",
     "\n",
     "        # Perform cross attention between the context and the output of the LSTM (in that order)\n",
-    "        x = self.None(None, None)\n",
+    "        x = self.attention(context,x)\n",
     "\n",
     "        # Do a pass through the post attention LSTM\n",
-    "        x = self.None(None)\n",
+    "        x = self.post_attention_rnn(x)\n",
     "\n",
     "        # Compute the logits\n",
-    "        logits = self.None(None)\n",
+    "        logits = self.output_layer(x)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f6165cf2",
    "metadata": {
     "deletable": false,
@@ -909,7 +909,17 @@
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor of contexts has shape: (64, 14, 256)\n",
+      "Tensor of right-shifted translations has shape: (64, 15)\n",
+      "Tensor of logits has shape: (64, 12000)\n"
+     ]
+    }
+   ],
    "source": [
     "# Do a quick check of your implementation\n",
     "\n",
@@ -940,14 +950,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1b61093a",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91mFailed test case: Incorrect shape of decoder output.\n",
+      "Expected: a shape with 3 dimensions\n",
+      "Got: (2, 6)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your code!\n",
     "\n",
